# as64_libs

./: .gitignore  README.md
c++/src/dmp_lib/: CMakeLists.txt
c++/src/dmp_lib/include/dmp_lib/: utils.h
c++/src/dmp_lib/src/CanonicalClock/: CanonicalClock.cpp
c++/src/dmp_lib/src/DMP/: DMP.cpp  DMP_.cpp  DMP_bio.cpp  DMP_eo.cpp  DMP_pos.cpp  DMPo.cpp
c++/src/dmp_lib/src/GatingFunction/: ExpGatingFunction.cpp  GatingFunction.cpp  LinGatingFunction.cpp  SigmoidGatingFunction.cpp
c++/src/dmp_lib/src/KalmanFilter/: DMPoEKFa.cpp  DMPpEKFa.cpp
c++/src/dmp_lib/src/io/: io.cpp
c++/src/dmp_lib/src/math/: quaternions.cpp
c++/src/dmp_lib/src/trainMethods/: LWR.cpp
c++/src/gmp_lib/: CMakeLists.txt
c++/src/gmp_lib/include/gmp_lib/: gmp_lib.h  utils.h
c++/src/gmp_lib/src/GMP/: GMP.cpp  GMP_nDoF.cpp  GMPo.cpp
c++/src/gmp_lib/src/GatingFunction/: ExpGatingFunction.cpp  GatingFunction.cpp  LinGatingFunction.cpp  SigmoidGatingFunction.cpp
c++/src/gmp_lib/src/WSoG/: WSoG.cpp
c++/src/gmp_lib/src/trainMethods/: LWR.cpp  LeastSquares.cpp
c++/src/io_lib/: CMakeLists.txt
c++/src/io_lib/include/io_lib/: file_io.h  io_utils.h
c++/src/io_lib/src/: file_io.cpp  io_utils.cpp
c++/src/kalmanfilter_lib/: CMakeLists.txt
c++/src/kf_lib/: CMakeLists.txt  package.xml
c++/src/kf_lib/include/kf_lib/: EKF.h
c++/src/kf_lib/src/: EKF.cpp  KF.cpp  UKF.cpp
c++/src/misc_lib/: CMakeLists.txt
c++/src/misc_lib/include/misc_lib/: joint_state_publisher.h  timer.h  wrench_reader.h
c++/src/misc_lib/src/: joint_state_publisher.cpp  timer.cpp  wrench_reader.cpp
c++/src/robo_lib/: CMakeLists.txt
c++/src/robo_lib/include/robo_lib/: joint_state_publisher.h  kinematic_chain.h  ppc_joint_limit_avoid.h  singular_value_filter.h  tool_estimator.h  xml_parser.h
c++/src/robo_lib/src/: joint_state_publisher.cpp  kinematic_chain.cpp  ppc_joint_limit_avoid.cpp  singular_value_filter.cpp  tool_estimator.cpp  xml_parser.cpp
c++/src/robots/bhand/: CMakeLists.txt  package.xml
c++/src/robots/bhand/config/: bh282.yaml
c++/src/robots/bhand/rviz/: config.rviz
c++/src/robots/bhand/src/: bh282_robot.cpp  bh282_sim_robot.cpp  kinematic_chain.cpp  robot_hand.cpp  utils.cpp
c++/src/robots/bhand/urdf/: bh280.urdf.xacro  bh282.urdf.xacro  bh282_robot.xacro
c++/src/robots/robot_wrapper/: CMakeLists.txt  package.xml
c++/src/robots/robot_wrapper/src/: lwr4p_robot.cpp  robot.cpp  ur_robot.cpp
c++/src/rviz_lib/: CMakeLists.txt  package.xml
c++/src/rviz_lib/include/rviz_lib/: rviz_publisher.h  tf_pose_publisher.h
c++/src/rviz_lib/src/: rviz_publisher.cpp  tf_pose_publisher.cpp
c++/src/sigproc_lib/: CMakeLists.txt
c++/src/sigproc_lib/include/sigproc_lib/: sigproc_lib.h
c++/src/test/bhand_test/: CMakeLists.txt
c++/src/test/bhand_test/launch/: bh282_robot_test.launch  multi_bh282_robots_test.launch
c++/src/test/bhand_test/rviz/: bh282_robot_test.rviz  multi_bh282_robots_test.rviz
c++/src/test/bhand_test/src/: bh282_robot_test.cpp  multi_bh282_robots_test.cpp  utils.cpp
c++/src/test/bhand_test/urdf/: bh282_robot_test.xacro  multi_bh282_robots_test.xacro
c++/src/test/dmp_kf_test/: CMakeLists.txt  package.xml
c++/src/test/dmp_kf_test/launch/: simDMP.launch  sim_DMP_Orient_EKF_disc.launch  sim_DMP_Pos_EKF_disc.launch  sim_DMPeoEKFc_disc.launch  sim_DMPoEKFa_disc.launch  sim_DMPoEKFc_disc.launch  sim_DMPpEKFa_disc.launch  sim_DMPpEKFc_disc.launch  trainDMP.launch  trainDMP_eo.launch  trainDMP_o.launch  trainDMP_pos.launch
c++/src/test/dmp_kf_test/matlab/: convertTrainData.m  plot_DMPeoEKFc_results.m  plot_DMPoEKFa_results.m  plot_DMPoEKFc_results.m  plot_DMPpEKFa_results.m  plot_DMPpEKFc_results.m  plot_orient_est_results.m  plot_pos_est_results.m  plot_train_results.m
c++/src/test/dmp_kf_test/src/: DMPoEKFa.cpp  DMPpEKFa.cpp  simDMP.cpp  sim_DMP_Orient_EKF_disc.cpp  sim_DMP_Pos_EKF_disc.cpp  sim_DMPeoEKFc_disc.cpp  sim_DMPoEKFa_disc.cpp  sim_DMPoEKFc_disc.cpp  sim_DMPpEKFa_disc.cpp  sim_DMPpEKFc_disc.cpp  trainDMP.cpp  trainDMP_eo.cpp  trainDMP_o.cpp  trainDMP_pos.cpp  utils.cpp
c++/src/test/dmp_test/: CMakeLists.txt  package.xml
c++/src/test/dmp_test/launch/: dmp_eo_test.launch  dmp_pos_test.launch  dmp_std_test.launch  dmp_test.launch  dmpo_test.launch
c++/src/test/dmp_test/matlab/: convertTrainData.m  dmp_eo_test_plot.m  dmp_pos_test_plot.m  dmp_std_plot.m  dmp_test_plot.m  dmpo_test_plot.m
c++/src/test/dmp_test/src/: dmp_eo_test.cpp  dmp_pos_test.cpp  dmp_std_test.cpp  dmp_test.cpp  dmpo_test.cpp  utils.cpp
c++/src/test/gmp_test/: CMakeLists.txt  package.xml
c++/src/test/gmp_test/launch/: test_GMP_update.launch  test_WSoG_update.launch  test_gmp_as_dmp.launch  test_nDoF_gmp.launch  test_orient_gmp.launch
c++/src/test/gmp_test/matlab/: GMP_update_plot.m  WSoG_update_plot.m  convertTrainData.m  gmp_as_dmp_plot.m  gmp_nDoF_plot.m  gmp_orient_plot.m  u.m
c++/src/test/gmp_test/src/: dmp_test.cpp  test_GMP_update.cpp  test_WSoG_update.cpp  test_gmp_as_dmp.cpp  test_nDoF_gmp.cpp  test_orient_gmp.cpp  utils.cpp
c++/src/test/io_test/: CMakeLists.txt  package.xml
c++/src/test/io_test/config/: xml_parser_test_config.yaml
c++/src/test/io_test/launch/: file_io_matlab_test.launch  file_io_test.launch  io_test.launch  term_color_test.launch  xml_parser_test.launch
c++/src/test/io_test/src/: file_io_matlab_test.cpp  file_io_test.cpp  io_test.cpp  term_color_test.cpp  xml_parser_test.cpp
c++/src/test/lwr4p_bhand_test/: CMakeLists.txt  package.xml
c++/src/test/lwr4p_bhand_test/launch/: lwr4p_bh282_robot_test.launch
c++/src/test/lwr4p_bhand_test/rviz/: lwr4p_bh282_robot_test.rviz
c++/src/test/lwr4p_bhand_test/src/: utils.cpp  (+1 more)
c++/src/test/lwr4p_test/: CMakeLists.txt  package.xml
c++/src/test/plot_test/: CMakeLists.txt  package.xml
c++/src/test/ppc_joint_limit_avoid_test/: CMakeLists.txt
c++/src/test/sigproc_test/: CMakeLists.txt  package.xml
c++/src/test/singular_value_filter_test/: CMakeLists.txt
c++/src/test/ur_test/: CMakeLists.txt  README.md  package.xml
c++/src/thread_lib/: CMakeLists.txt  package.xml
c++/src/thread_lib/src/: thread_utils.cpp
(+526 files in other folders)
