<?xml version="1.0"?>
<package>
  <name>rviz_lib</name>
  <version>0.0.1</version>
  <description>Math utilities</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>rviz_visual_tools</build_depend>
  <run_depend>rviz_visual_tools</run_depend>

</package>
